6769607: PIT : Modal frame hangs for a while for few seconds in 6u12 b01 pit build

Reviewed-by: art, anthony